[package]
name = "test-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.20", default-features=false, features = ["json", "rustls-tls"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
